--- a/.github/workflows/sync-repos.yml
+++ b/.github/workflows/sync-repos.yml
@@ -15,11 +15,11 @@ jobs:
         run: |
           git config --global user.email "bot@satoshi.com"
           git config --global user.name "Satoshi bot"
-          git clone https://SH1R3F:${{ secrets.PAT_TOKEN }}@github.com/satoshiux/hyva.git
+          git clone https://${{ secrets.PAT_TOKEN }}@github.com/satoshiux/hyva.git
           cd hyva
           rm -rf .github/workflows/
           git remote remove origin
-          git remote add origin https://SH1R3F:${{ secrets.PAT_TOKEN }}@github.com/scandipwacloud/readymage-satoshi-bmk-1720548019.git
+          git remote add origin https://${{ secrets.PAT_TOKEN }}@github.com/scandipwacloud/readymage-satoshi-bmk-1720548019.git
           git add .
           git commit -m ${{ github.event.head_commit.message }}
           git push -u origin production -f
