--- a/.github/workflows/sync-repos.yml
+++ b/.github/workflows/sync-repos.yml
@@ -10,7 +10,7 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Sync
+      - name: Sync repos
         shell: bash
         run: |
           git config --global user.email "bot@satoshi.com"
@@ -21,5 +21,5 @@ jobs:
           git remote remove origin
           git remote add origin https://${{ secrets.PAT_TOKEN }}@github.com/scandipwacloud/readymage-satoshi-bmk-1720548019.git
           git add .
-          git commit -m ${{ github.event.head_commit.message }}
+          git commit -m "${{ github.event.head_commit.message }}"
           git push -u origin production -f
