--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/package.json
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/package.json
@@ -18,6 +18,7 @@
     "@types/alpinejs__intersect": "^3.13.4",
     "@types/alpinejs__morph": "^3.13.4",
     "@types/alpinejs__persist": "^3.13.4",
+    "@types/grecaptcha": "^3.0.9",
     "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-vue": "^5.0.4",
