Revert 'test deployment fix'
This reverts commit d3979b925a7eb700ccbd8081b9aecbbe80a08cac.

--- a/readymage.yaml
+++ b/readymage.yaml
@@ -15,3 +15,8 @@ environments:
         Magento/luma:
           area: frontend
           languages: ["en_US"]
+        Satoshi/Hyva:
+          area: frontend
+          directory: app/design/frontend/Satoshi/Hyva/web/satoshi
+          playbook: hyva
+          languages: ["en_US"]
