Enable syncing with readymage

--- a/.github/workflows/sync-repos.yml
+++ b/.github/workflows/sync-repos.yml
@@ -1,25 +1,25 @@
-# name: Push to Readymage
-# on:
-#   push:
-#     branches: production
+name: Push to Readymage
+on:
+  push:
+    branches: production
 
-# permissions:
-#   contents: write
+permissions:
+  contents: write
 
-# jobs:
-#   sync:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Sync repos
-#         shell: bash
-#         run: |
-#           git config --global user.email "bot@satoshi.com"
-#           git config --global user.name "Satoshi bot"
-#           git clone https://${{ secrets.PAT_TOKEN }}@github.com/satoshiux/hyva.git
-#           cd hyva
-#           rm -rf .github/workflows/
-#           git remote remove origin
-#           git remote add origin https://${{ secrets.PAT_TOKEN }}@github.com/scandipwacloud/readymage-satoshi-bmk-1720548019.git
-#           git add .
-#           git commit -m "${{ github.event.head_commit.message }}"
-#           git push -u origin production -f
+jobs:
+  sync:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Sync repos
+        shell: bash
+        run: |
+          git config --global user.email "bot@satoshi.com"
+          git config --global user.name "Satoshi bot"
+          git clone https://${{ secrets.PAT_TOKEN }}@github.com/satoshiux/hyva.git
+          cd hyva
+          rm -rf .github/workflows/
+          git remote remove origin
+          git remote add origin https://${{ secrets.PAT_TOKEN }}@github.com/scandipwacloud/readymage-satoshi-bmk-1720548019.git
+          git add .
+          git commit -m "${{ github.event.head_commit.message }}"
+          git push -u origin production -f
