--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,8 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "version": "2.4.6-p3",
+    "version": "2.4.8",
     "require": {
-        "readymage/logger": "^1.1",
-        "readymage/maintenance": "^1.0",
         "hyva-themes/magento2-default-theme": "^1.3",
         "hyva-themes/magento2-luma-checkout": "^1.1",
         "magento/composer-dependency-version-audit-plugin": "~0.1",
@@ -31,7 +29,7 @@
         "magento/module-configurable-sample-data": "100.4.*",
         "magento/module-customer-sample-data": "100.4.*",
         "magento/module-downloadable-sample-data": "100.4.*",
-        "magento/module-elasticsearch-8": "^100.4",
+        "magento/module-elasticsearch-8": "^101.0",
         "magento/module-grouped-product-sample-data": "100.4.*",
         "magento/module-msrp-sample-data": "100.4.*",
         "magento/module-offline-shipping-sample-data": "100.4.*",
@@ -44,8 +42,10 @@
         "magento/module-theme-sample-data": "100.4.*",
         "magento/module-widget-sample-data": "100.4.*",
         "magento/module-wishlist-sample-data": "100.4.*",
-        "magento/product-community-edition": "2.4.6-p3",
-        "magento/sample-data-media": "100.4.*"
+        "magento/product-community-edition": "2.4.8",
+        "magento/sample-data-media": "100.4.*",
+        "readymage/logger": "^1.1",
+        "readymage/maintenance": "^1.0"
     },
     "autoload": {
         "exclude-from-classmap": [
@@ -69,19 +69,18 @@
         }
     },
     "require-dev": {
-        "allure-framework/allure-phpunit": "^2",
+        "magento/magento-allure-phpunit": "^3.0.2",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
         "dg/bypass-finals": "^1.4",
         "friendsofphp/php-cs-fixer": "^3.8",
         "lusitanian/oauth": "^0.8",
         "magento/magento-coding-standard": "*",
-        "magento/magento2-functional-testing-framework": "^4.2.1",
+        "magento/magento2-functional-testing-framework": "^5.0",
         "pdepend/pdepend": "^2.10",
         "phpmd/phpmd": "^2.12",
         "phpstan/phpstan": "^1.9",
-        "phpunit/phpunit": "^9.5",
-        "sebastian/phpcpd": "^6.0",
-        "symfony/finder": "^5.4"
+        "phpunit/phpunit": "^10.5",
+        "symfony/finder": "^6.4"
     },
     "conflict": {
         "gene/bluefoot": "*"
