--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/package.json
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/package.json
@@ -30,7 +30,7 @@
     "vite": "^5.2.4"
   },
   "scripts": {
-    "dev": "vite build --watch",
+    "dev": "vite dev",
     "build": "tsc && vite build"
   },
   "engines": {
