--- a/readymage.yaml
+++ b/readymage.yaml
@@ -20,3 +20,17 @@ environments:
           directory: app/design/frontend/Satoshi/Hyva/web/satoshi
           playbook: hyva
           languages: ["en_US"]
+  - name: readymage-satoshi-bmk-1720548019-var-umj
+    build:
+      themes:
+        Magento/backend:
+          area: adminhtml
+          languages: ["en_US"]
+        Magento/luma:
+          area: frontend
+          languages: ["en_US"]
+        Satoshi/Hyva:
+          area: frontend
+          directory: app/design/frontend/Satoshi/Hyva/web/satoshi
+          playbook: hyva
+          languages: ["en_US"]
