Add build script to package.json and move additional files in post-install.sh

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "status": "magento-scripts status",
         "exec": "magento-scripts exec",
         "import-db": "magento-scripts import-db",
-        "setup-theme": "chmod +x post-install.sh && ./post-install.sh"
+        "setup-theme": "chmod +x post-install.sh && ./post-install.sh",
+        "build": "cd satoshi-theme/src/satoshi-theme/web/satoshi && npm install && npm run build"
     },
     "devDependencies": {
         "@scandipwa/magento-scripts": "2.4.2"
