--- a/src/satoshi-theme/web/satoshi/package.json
+++ b/src/satoshi-theme/web/satoshi/package.json
@@ -10,8 +10,7 @@
     "alpinejs": "^3.13.7",
     "autoprefixer": "^10.4.13",
     "browser-sync": "^2.27.10",
-    "nprogress": "^0.2.0",
-    "postcss-import": "^14.1.0"
+    "nprogress": "^0.2.0"
   },
   "devDependencies": {
     "@types/alpinejs": "^3.13.9",
@@ -22,9 +21,13 @@
     "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-vue": "^5.0.4",
-    "postcss": "^8.4.18",
+    "postcss": "^8.4.33",
+    "postcss-import": "^14.1.0",
+    "postcss-preset-env": "^9.3.0",
+    "tailwindcss": "^3.4.13",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
     "sass": "1.72.0",
-    "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.3",
     "vite": "^5.2.4"
