--- a/src/satoshi-theme/web/satoshi/tsconfig.json
+++ b/src/satoshi-theme/web/satoshi/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "paths": {
+      "@satoshi-theme/*": ["./*"],
+      "@satoshi/*": ["./*"],
+    },
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
@@ -20,5 +24,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-    "exclude": ["tailwind.config.js", "vite.config.js", "assets", "postcss.config.js", "browser-sync.config.js"]
-  }
+  "include": ["src/**/*", "src/global.d.ts"],
+  "exclude": ["tailwind.config.js", "vite.config.js", "assets", "postcss.config.js", "browser-sync.config.js"]
+}
