Check is Satoshi theme active in modules & Remove Satoshi inheritance mechanism

--- a/src/satoshi-theme/web/satoshi/package.json
+++ b/src/satoshi-theme/web/satoshi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@satoshi/hyva",
+  "name": "@scandiweb/satoshi",
   "version": "1.0.0",
   "main": "tailwind.config.js",
   "dependencies": {
