--- a/src/satoshi-theme/web/satoshi/package.json
+++ b/src/satoshi-theme/web/satoshi/package.json
@@ -8,32 +8,30 @@
     "@alpinejs/persist": "^3.13.7",
     "@hyva-themes/hyva-modules": "^1.0.9",
     "alpinejs": "^3.13.7",
-    "autoprefixer": "^10.4.13",
-    "browser-sync": "^2.27.10",
     "nprogress": "^0.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/alpinejs": "^3.13.9",
     "@types/alpinejs__intersect": "^3.13.4",
     "@types/alpinejs__morph": "^3.13.4",
     "@types/alpinejs__persist": "^3.13.4",
     "@types/grecaptcha": "^3.0.9",
     "@types/nprogress": "^0.2.3",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.13",
+    "browser-sync": "^2.27.10",
     "postcss": "^8.4.33",
     "postcss-import": "^14.1.0",
     "postcss-preset-env": "^9.3.0",
-    "tailwindcss": "^3.4.13",
-    "@tailwindcss/forms": "^0.5.9",
-    "@tailwindcss/typography": "^0.5.15",
     "sass": "1.72.0",
+    "tailwindcss": "^3.4.13",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.3",
     "vite": "^5.2.4"
   },
   "scripts": {
-    "dev": "vite build --watch",
+    "dev": "vite build --watch.allowInputInsideOutputPath",
     "build": "tsc && vite build"
   },
   "engines": {
