Add demo branches to workflow trigger for sync-repos

--- a/.github/workflows/sync-repos.yml
+++ b/.github/workflows/sync-repos.yml
@@ -4,6 +4,8 @@ on:
     branches:
       - production
       - develop
+      - demo-develop
+      - demo-production
 
 permissions:
   contents: write
