--- a/.github/workflows/sync-repos.yml
+++ b/.github/workflows/sync-repos.yml
@@ -34,6 +34,13 @@ jobs:
             git checkout develop
           fi
 
+          # If branch is demo-develop, checkout demo-develop
+          if [ "$BRANCH_NAME" = "demo-develop" ]; then
+            git fetch --all
+            git checkout demo-develop
+          fi
+
+
           # Remove workflows directory
           rm -rf .github/workflows/
 
