--- a/src/satoshi-theme/web/satoshi/tsconfig.json
+++ b/src/satoshi-theme/web/satoshi/tsconfig.json
@@ -21,7 +21,8 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["node", "grecaptcha"]
   },
   "include": ["src/**/*", "src/global.d.ts"],
   "exclude": ["tailwind.config.js", "vite.config.js", "assets", "postcss.config.js", "browser-sync.config.js"]
