Remove workflows directory before syncing to target repository

--- a/.github/workflows/sync-repos.yml
+++ b/.github/workflows/sync-repos.yml
@@ -72,5 +72,6 @@ jobs:
       - name: Sync to target repository
         run: |
           # Push current branch to target repository
+          rm -rf .github/workflows/
           BRANCH_NAME=${GITHUB_REF#refs/heads/}
           git push target $BRANCH_NAME --force-with-lease
