Use amend option for commit to sync workflows

--- a/.github/workflows/sync-repos.yml
+++ b/.github/workflows/sync-repos.yml
@@ -74,6 +74,6 @@ jobs:
           # Push current branch to target repository
           rm -rf .github/workflows/
           git add .github/workflows/
-          git commit -m "Exclude workflows"
+          git commit --amend --no-edit
           BRANCH_NAME=${GITHUB_REF#refs/heads/}
           git push target $BRANCH_NAME -f
