--- a/.github/workflows/sync-repos.yml
+++ b/.github/workflows/sync-repos.yml
@@ -1,43 +1,129 @@
-name: Push to Readymage
+name: Branch Management and Sync
+
 on:
   push:
     branches:
-      - production
       - develop
-
-permissions:
-  contents: write
+      - demo-develop
+      - demo-production
 
 jobs:
-  sync:
+  handle-develop-commit:
+    if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
-      - name: Sync repos
-        shell: bash
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.PAT_TOKEN }}
+          fetch-depth: 0
+
+      - name: Setup Git
         run: |
-          # Set Git configuration
           git config --global user.email "bot@satoshi.com"
           git config --global user.name "Satoshi bot"
 
-          # Clone the repository
-          git clone https://${{ secrets.PAT_TOKEN }}@github.com/satoshiux/hyva.git
-          cd hyva
+      - name: Switch to demo-develop branch
+        run: |
+          git checkout demo-develop
+          git pull origin demo-develop
 
-          # Get the branch name that triggered the workflow
-          BRANCH_NAME=${GITHUB_REF#refs/heads/}
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.1"
+          tools: composer
 
-          # If branch is develop, checkout develop
-          if [ "$BRANCH_NAME" = "develop" ]; then
-            git fetch --all
-            git checkout develop
+      - name: Update scandiweb/satoshi package
+        run: |
+          composer config --global http-basic.repo.magento.com ${{ secrets.MAGENTO_PUB_KEY }} ${{ secrets.MAGENTO_SECRET_KEY }}
+          composer config --global http-basic.hyva-themes.repo.packagist.com token ${{ secrets.HYVA_SECRET_KEY }}
+          composer update scandiweb/satoshi --no-interaction --optimize-autoloader --no-install
+
+      - name: Commit changes
+        run: |
+          git add composer.json composer.lock
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "$COMMIT_MESSAGE"
+            git push origin demo-develop
           fi
+        env:
+          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
 
-          # Remove workflows directory
+  # handle-tag-creation:
+  #   if: github.event_name == 'create' && github.ref_type == 'tag'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         fetch-depth: 0
+
+  #     - name: Setup Git
+  #       run: |
+  #         git config --global user.email "bot@satoshi.com"
+  #         git config --global user.name "Satoshi bot"
+
+  #     - name: Switch to demo-production branch
+  #       run: |
+  #         git fetch origin
+  #         git checkout demo-production
+  #         git reset --hard origin/demo-production
+
+  #     - name: Setup PHP
+  #       uses: shivammathur/setup-php@v2
+  #       with:
+  #         php-version: "8.1"
+  #         tools: composer
+
+  #     - name: Update scandiweb/satoshi to specific version
+  #       run: |
+  #         # Extract version from tag name (assuming tag format like v1.0.0)
+  #         TAG_NAME="${{ github.ref_name }}"
+  #         VERSION="${TAG_NAME#v}"  # Remove 'v' prefix if present
+
+  #         # Update to specific version
+  #         composer config --global http-basic.repo.magento.com ${{ secrets.MAGENTO_PUB_KEY }} ${{ secrets.MAGENTO_SECRET_KEY }}
+  #         composer config --global http-basic.hyva-themes.repo.packagist.com token ${{ secrets.HYVA_SECRET_KEY }}
+  #         composer require scandiweb/satoshi:"^${VERSION}" --no-interaction --optimize-autoloader --no-install
+
+  #     - name: Commit changes
+  #       run: |
+  #         git add composer.json composer.lock
+  #         if git diff --staged --quiet; then
+  #           echo "No changes to commit"
+  #         else
+  #           git commit -m "Upgrade scandiweb/satoshi to version ${VERSION}"
+  #           git push origin demo-production
+  #         fi
+
+  sync-demo-branches:
+    if: github.ref == 'refs/heads/demo-develop' || github.ref == 'refs/heads/demo-production'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source repository
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.PAT_TOKEN }}
+          fetch-depth: 0
+
+      - name: Setup Git
+        run: |
+          git config --global user.email "bot@satoshi.com"
+          git config --global user.name "Satoshi bot"
+
+      - name: Add remote repository
+        run: |
+          git remote add target https://${{ secrets.PAT_TOKEN }}@github.com/scandipwacloud/readymage-satoshi-bmk-1720548019.git
+
+      - name: Sync to target repository
+        run: |
+          # Push current branch to target repository
           rm -rf .github/workflows/
-
-          # Change remote and push
-          git remote remove origin
-          git remote add origin https://${{ secrets.PAT_TOKEN }}@github.com/scandipwacloud/readymage-satoshi-bmk-1720548019.git
-          git add .
-          git commit -m "${{ github.event.head_commit.message }}"
-          git push -u origin $BRANCH_NAME -f
+          git add .github/workflows/
+          git commit --amend --no-edit
+          BRANCH_NAME=${GITHUB_REF#refs/heads/}
+          git push target $BRANCH_NAME -f
