Install Satoshi theme

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "magento/product-community-edition": "2.4.6-p3",
         "magento/sample-data-media": "100.4.*",
         "readymage/logger": "^1.1",
-        "readymage/maintenance": "^1.0"
+        "readymage/maintenance": "^1.0",
+        "scandiweb/satoshi": "^2.0"
     },
     "autoload": {
         "exclude-from-classmap": [
